
#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This file describes release notes for
#        the ssa IOC Application.
#
#--------------------------------------------------------------

R1.0.0: 27-Mar-2020  M. Dunning (mdunning)
    Add new iocsh script for cryomodule SSAs
    Add IOCs for CM 12-19 SSAs
    Add auto-archiving
    Upgrade to EPICS 7

ssa-R0-0-11: 09-Apr-2019  M. Dunning (mdunning)
    Add polynomial conversion for gun fwd/rev/drv power

ssa-R0-0-10: 04-Apr-2019  M. Dunning (mdunning)
    Add common On/Off/Reset controls
    Adjust CA186 alarm limits for drain voltage

ssa-R0-0-9: 11-Feb-2019  M. Dunning (mdunning)
    Add CA3900 error messages
    Separate ssa1 and ssa2 b15 dev IOCs
    Change ssa2 to 4.6kW as requested by Andy

ssa-R0-0-8: 23-Jan-2019  M. Dunning (mdunning)
    Add support for R&K CA3900 3.9 GHz SSA for LCLS2
    sioc-b15-ssa3: Change from CA186 to CA3900 config
    sioc-b15-ssa1: Remove SSA2 which is not connected
    Update module versions

ssa-R0-0-7: 20-Sep-2018  M. Dunning (mdunning)
    Sequencer routines: when faulted, make power off button return instead of staying depressed

ssa-R0-0-6: 20-Aug-2018  M. Dunning (mdunning)
    Add "public" ai record for l-band drain voltage readback
    Add drain voltage setpt and readback for gun ssa
    Fix PSVoltRBV alarm limits for gun ssa

ssa-R0-0-5: 08-Aug-2018  M. Dunning (mdunning)
    Add message printing to gun sequencer routine
    Add comments to gun and l-band sequencer routines

ssa-R0-0-4: 09-Jul-2018  M. Dunning (mdunning) 
    Add LCLS-II gun/buncher IOC sioc-gunb-ssa01
    Support multiple CA186 SSAs per IOC
    Add alarm summaries for CA186 SSA
    Upgrade asyn and modbus

ssa-R0-0-3: 17-May-2018  S. Hoobler (sonya) 
    Add LERF sioc-l1b-rf02
    Initial version deployed at LERF

ssa-R0-0-2: 15-May-2018  M. Dunning (mdunning) 
    Create common and lerf iocBoot directories (thanks to Sonya)