@@ -18,7 +18,4 @@
 
 Multi-facility SSA application
 
-This app currently uses BASE_MODULE_VERSION=R3.15.5-1.1
-
-
 # End of file
