@@ -1,4 +1,5 @@
-#--- SSA modules 00-30 -----------------------------------
+#--- ssa_RK_CA186_modules.substitutions: Subs file for R&K CA186 SSA modules 00-30 -----------------------------------
+#--- This file was generated by ssa_modules.py -----------------------------------
 
 file "bi_word_custom.template" {
 pattern
@@ -261,37 +262,37 @@ pattern
 {     M28_FwdPwr,          "Forward Power", $(P)_inw16,     99,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M29_FwdPwr,          "Forward Power", $(P)_inw17,     49,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M30_FwdPwr,          "Forward Power", $(P)_inw17,     99,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M00_RefPwr,        "Reflected Power", $(P)_inw02,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M00_RefPwr,        "Reflected Power", $(P)_inw03,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M01_RefPwr,        "Reflected Power", $(P)_inw03,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M02_RefPwr,        "Reflected Power", $(P)_inw03,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M02_RefPwr,        "Reflected Power", $(P)_inw04,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M03_RefPwr,        "Reflected Power", $(P)_inw04,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M04_RefPwr,        "Reflected Power", $(P)_inw04,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M04_RefPwr,        "Reflected Power", $(P)_inw05,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M05_RefPwr,        "Reflected Power", $(P)_inw05,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M06_RefPwr,        "Reflected Power", $(P)_inw05,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M06_RefPwr,        "Reflected Power", $(P)_inw06,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M07_RefPwr,        "Reflected Power", $(P)_inw06,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M08_RefPwr,        "Reflected Power", $(P)_inw06,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M08_RefPwr,        "Reflected Power", $(P)_inw07,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M09_RefPwr,        "Reflected Power", $(P)_inw07,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M10_RefPwr,        "Reflected Power", $(P)_inw07,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M10_RefPwr,        "Reflected Power", $(P)_inw08,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M11_RefPwr,        "Reflected Power", $(P)_inw08,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M12_RefPwr,        "Reflected Power", $(P)_inw08,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M12_RefPwr,        "Reflected Power", $(P)_inw09,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M13_RefPwr,        "Reflected Power", $(P)_inw09,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M14_RefPwr,        "Reflected Power", $(P)_inw09,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M14_RefPwr,        "Reflected Power", $(P)_inw10,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M15_RefPwr,        "Reflected Power", $(P)_inw10,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M16_RefPwr,        "Reflected Power", $(P)_inw10,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M16_RefPwr,        "Reflected Power", $(P)_inw11,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M17_RefPwr,        "Reflected Power", $(P)_inw11,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M18_RefPwr,        "Reflected Power", $(P)_inw11,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M18_RefPwr,        "Reflected Power", $(P)_inw12,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M19_RefPwr,        "Reflected Power", $(P)_inw12,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M20_RefPwr,        "Reflected Power", $(P)_inw12,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M20_RefPwr,        "Reflected Power", $(P)_inw13,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M21_RefPwr,        "Reflected Power", $(P)_inw13,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M22_RefPwr,        "Reflected Power", $(P)_inw13,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M22_RefPwr,        "Reflected Power", $(P)_inw14,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M23_RefPwr,        "Reflected Power", $(P)_inw14,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M24_RefPwr,        "Reflected Power", $(P)_inw14,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M24_RefPwr,        "Reflected Power", $(P)_inw15,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M25_RefPwr,        "Reflected Power", $(P)_inw15,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M26_RefPwr,        "Reflected Power", $(P)_inw15,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M26_RefPwr,        "Reflected Power", $(P)_inw16,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M27_RefPwr,        "Reflected Power", $(P)_inw16,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M28_RefPwr,        "Reflected Power", $(P)_inw16,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M28_RefPwr,        "Reflected Power", $(P)_inw17,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {     M29_RefPwr,        "Reflected Power", $(P)_inw17,     50,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
-{     M30_RefPwr,        "Reflected Power", $(P)_inw17,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
+{     M30_RefPwr,        "Reflected Power", $(P)_inw18,      0,     0.0,    1.0,    1,     "",     "",     "",     "", NO_ALARM, NO_ALARM, NO_ALARM, NO_ALARM,      "", "I/O Intr"}
 {  M00_Dev1Drn_I, "Device 1 Drain Current", $(P)_inw03,      1,     0.0, 0.0162,    1,     "",     "",   48.0,   50.0, NO_ALARM, NO_ALARM,    MINOR,    MAJOR,     "A", "I/O Intr"}
 {  M01_Dev1Drn_I, "Device 1 Drain Current", $(P)_inw03,     51,     0.0, 0.0162,    1,     "",     "",   48.0,   50.0, NO_ALARM, NO_ALARM,    MINOR,    MAJOR,     "A", "I/O Intr"}
 {  M02_Dev1Drn_I, "Device 1 Drain Current", $(P)_inw04,      1,     0.0, 0.0162,    1,     "",     "",   48.0,   50.0, NO_ALARM, NO_ALARM,    MINOR,    MAJOR,     "A", "I/O Intr"}
