@@ -43,7 +43,10 @@ str_fpga = '{{    M{0:02d}_FPGAVer,           "FPGA Version", $(P)_inw{1:02d},  
 def wrloop(f, str, nmods, nregs, start):
     for i in range(nmods):
         regnum = i*nregs + start
-        j = (regnum - 1)/100
+        if regnum % 100 == 0:
+            j = regnum/100
+        else:
+            j = (regnum - 1)/100
         regnum %= 100
         f.write(str.format(i, j, regnum))
         f.write('\n')
@@ -113,7 +116,9 @@ def write_alarm_sums(f):
     
 def write_subs_file(filename):
     with open(filename, 'w') as f:
-        f.write('#--- SSA modules 00-{0} -----------------------------------'.format(NMODS-1))
+        f.write('#--- ssa_RK_CA186_modules.substitutions: Subs file for R&K CA186 SSA modules 00-{0} -----------------------------------'.format(NMODS-1))
+        f.write('\n')
+        f.write('#--- This file was generated by ssa_modules.py -----------------------------------'.format(NMODS-1))
         f.write('\n')
         f.write('\n')
         # bi
