@@ -8,6 +8,9 @@
 #
 #--------------------------------------------------------------
 
+R1.0.1: 10-Jun-2020  M. Dunning (mdunning)
+    Fix reflected power register mapping for CA186 modules (CATER 141429)
+
 R1.0.0: 27-Mar-2020  M. Dunning (mdunning)
     Add new iocsh script for cryomodule SSAs
     Add IOCs for CM 12-19 SSAs
